--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "lib": "lib"
   },
   "dependencies": {
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "ts-loader": "^4.4.2",
+    "typescript": "^2.9.2",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-	"host": "http-server"
+    "build": "webpack --mode development --watch",
+    "host": "http-server"
   },
   "repository": {
     "type": "git",
