--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lib": "lib"
   },
   "dependencies": {
+    "@types/pixi.js": "^4.8.0",
     "http-server": "^0.11.1",
+    "pixi.js": "^4.8.1",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
     "webpack": "^4.16.2",
